<resources>
    <string name="app_name">SP6</string>

    <string name="action_logout" translatable="false">Logout</string>
    <string name="title_activity_login" translatable="false">Login</string>
    <string name="title_activity_register" translatable="false">Register</string>
    <string name="title_activity_smart_parking" translatable="false">SmartParking</string>
    <string name="title_activity_fragment1" translatable="false">Fragment1</string>
    <string name="title_activity_fragment2" translatable="false">Fragment2</string>
    <string name="title_activity_fragment3" translatable="false">Fragment3</string>
    <string name="title_activity_fragment4" translatable="false">Fragment4</string>
    <string name="getDataButton">Get Data</string>
    <string name="btn_get_location">Store Location</string>
    <string name="lbl_you_are_at">coordiante</string>
    <string name="displaylocation">Display Location</string>
    <string name="btn_display_location">Display Location</string>
    <string name="title_activity_car_park_detail">CarParkDetail</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="CarParkNameDetail">Carpark name:</string>
    <string name="StreetDetail">Street:</string>
    <string name="PhoneDetail">Phone:</string>
    <string name="TotalSpaceDetail">Total space:</string>
    <string name="SpaceDetail">Space:</string>
    <string name="RatesDetail">Hourly rates:</string>
    <string name="NavigateDetail">Navigate</string>
    <string name="test">Car Park Detail</string>
    <string name="Longitude">Longitude:</string>
    <string name="Latitude">Latitude:</string>
</resources>
