<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.tg76.sp6.CarParkDetail">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textSize="20dip"
        android:textStyle="bold"
        android:text="@string/test"
        android:id="@+id/tvCarParkNameHeading"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/CarParkNameDetail"
        android:id="@+id/tvCarParkName"
        android:layout_below="@+id/tvCarParkNameHeading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/StreetDetail"
        android:layout_below="@+id/tvCarParkName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvStreet" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/PhoneDetail"
        android:layout_below="@+id/tvStreet"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvPhone" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/TotalSpaceDetail"
        android:layout_below="@+id/tvPhone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvTotalSpace" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/SpaceDetail"
        android:layout_below="@+id/tvTotalSpace"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvSpace" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/RatesDetail"
        android:layout_below="@+id/tvSpace"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvRates" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/Latitude"
        android:layout_below="@+id/tvRates"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvLatitude" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/Longitude"
        android:layout_below="@+id/tvLatitude"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvLongitude" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NavigateDetail"
        android:id="@+id/buttonNavigate"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/tvLongitude"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/CarParkNameDetail"
        android:id="@+id/CarParkNameDetailResult"
        android:layout_alignTop="@+id/tvCarParkName"
        android:layout_alignLeft="@+id/buttonNavigate"
        android:layout_alignStart="@+id/buttonNavigate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/StreetDetail"
        android:id="@+id/StreetDetailResult"
        android:layout_below="@+id/CarParkNameDetailResult"
        android:layout_alignLeft="@+id/CarParkNameDetailResult"
        android:layout_alignStart="@+id/CarParkNameDetailResult" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/PhoneDetail"
        android:id="@+id/PhoneDetailResult"
        android:layout_below="@+id/StreetDetailResult"
        android:layout_alignLeft="@+id/CarParkNameDetailResult"
        android:layout_alignStart="@+id/CarParkNameDetailResult" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/TotalSpaceDetail"
        android:id="@+id/TotalSpaceDetailResult"
        android:layout_below="@+id/PhoneDetailResult"
        android:layout_alignLeft="@+id/CarParkNameDetailResult"
        android:layout_alignStart="@+id/CarParkNameDetailResult" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/SpaceDetail"
        android:id="@+id/SpaceDetailResult"
        android:layout_below="@+id/TotalSpaceDetailResult"
        android:layout_alignLeft="@+id/CarParkNameDetailResult"
        android:layout_alignStart="@+id/CarParkNameDetailResult" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/RatesDetail"
        android:id="@+id/tvRatesResult"
        android:layout_below="@+id/SpaceDetailResult"
        android:layout_alignLeft="@+id/CarParkNameDetailResult"
        android:layout_alignStart="@+id/CarParkNameDetailResult" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/Latitude"
        android:id="@+id/tvLatitudeResult"
        android:layout_below="@+id/tvRatesResult"
        android:layout_alignLeft="@+id/CarParkNameDetailResult"
        android:layout_alignStart="@+id/CarParkNameDetailResult" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/Longitude"
        android:id="@+id/tvLongitudeResult"
        android:layout_below="@+id/tvLatitudeResult"
        android:layout_alignLeft="@+id/CarParkNameDetailResult"
        android:layout_alignStart="@+id/CarParkNameDetailResult" />

</RelativeLayout>
